2008-08-25  David Schleef  <ds@schleef.org>

	* ext/cairo/gsttextoverlay.c: Fix obvious memleak.

2008-08-25  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst/matroska/matroska-demux.c: (gst_matroska_demux_send_event),
	(gst_matroska_demux_video_caps), (gst_matroska_demux_audio_caps):
	* gst/matroska/matroska-mux.c:
	(gst_matroska_mux_video_pad_setcaps),
	(gst_matroska_mux_audio_pad_setcaps), (gst_matroska_mux_finish):
	Add Real[Audio|Video] support to Matroska containers.
	It works fine for:
	* decoding real audio/video streams contained in mkv
	* 'transmuxing' real (.rm) files into .mkv files
	It will not work though for encoding real[audio/video] streams that
	don't contain the 'mdpr_data' extra data on the caps.
	The reason why this will not work is because I never intended to
	duplicate virtually all the 'mdpr' block creation into mkvmux.
	Fixes #536067

2008-08-25  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/law/alaw-encode.c: (gst_alaw_enc_init), (gst_alaw_enc_chain):
	* gst/law/mulaw-conversion.c:
	* gst/law/mulaw-encode.c: (gst_mulawenc_init),
	(gst_mulawenc_chain):
	The encoder can't really renegotiate at the time they perform a
	pad-alloc so make the srcpads use fixed caps.
	Check the buffer size after a pad-alloc because the returned size might
	not be right when the downstream element does not know the size of the
	new buffer (capsfilter). Fixes #549073.

2008-08-23  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

        Patch by: Filippo Argiolas <filippo dot argiolas at gmail dot com>

	* sys/v4l2/gstv4l2tuner.c: (gst_v4l2_tuner_set_norm_and_notify):
	v4l2src doesn't have a property named "norm" so don't try to notify
	about changes to that property. The "norm" property and related
	code are commented out currently. Fixes bug #549090.

2008-08-23  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

        Patch by: Mike Ruprecht <cmaiku at gmail dot com>

	* sys/v4l2/gstv4l2object.c: (gst_v4l2_class_probe_devices):